# ai-orchestrator

./: .editorconfig  .env.production.example  .flake8  .gitignore  .pylintrc  ADVANCED_FEATURES.md  APPLICATION_TESTING_EXECUTION_SUMMARY.md  ARCHITECTURE.md  AUDIT_REPORT.md  COMMIT_SUMMARY.md  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DOCUMENTATION_INDEX.md  ERROR_HANDLING.md  FINAL_PROJECT_REPORT.md  FINAL_TEST_EXECUTION_RESULTS.md  GETTING_STARTED.md  K8S_AUTOSCALING_GUIDE.md  K8S_BACKUP_RESTORE.md  K8S_CACHE_SETUP.md  K8S_DATABASE_SETUP.md  K8S_DEPLOYMENT.md  K8S_DEPLOYMENT_GUIDE.md  K8S_OPERATIONS_GUIDE.md  K8S_TROUBLESHOOTING_GUIDE.md  LOCAL_DEV_SETUP.md  NEXT_WEEK_ROADMAP.md  PERFECTION_CHECKLIST.md  PERFECTION_PASS_SUMMARY.md  PHASE_3_COMPLETE.md  PHASE_3_PLAN.md  PHASE_4_COMPLETE.md  PHASE_4_PLAN.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_COMPLETION_REPORT.md  PHASE_TEST_AND_FIX_REPORT.md  PRODUCTION_DEBUGGING.md  (+44 more)
backend/: .env.example  Dockerfile  Dockerfile.worker  TEST_AUTH_FIXES_SUMMARY.md  alembic.ini  requirements-test.txt  requirements.txt  run_fullstack_tests.py  run_security_tests.py
frontend/: .env.example  .env.local  Dockerfile  package-lock.json  package.json  sentry.client.config.js  sentry.server.config.js  test_output.txt  tsconfig.json
k8s/: 00-namespace-rbac.yaml  01-database-redis.yaml  02-api-deployment.yaml  03-worker-deployment.yaml  04-frontend-deployment.yaml  05-hpa.yaml  06-ingress.yaml  07-secrets-template.yaml  08-keda-scaler.yaml  day1-api-deployment.yaml  day1-hpa-cpu.yaml  day1-hpa-keda.yaml  (+14 more)
(+145 files in other folders)
